--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "react-qrcode-logo": "^3.0.0",
     "react-router-dom": "^6.23.1",
     "react-spinners": "^0.15.0",
+    "recharts": "^3.0.0-alpha.1",
     "tailwind-merge": "^2.6.0",
     "tailwindcss-animate": "^1.0.7",
     "ua-parser-js": "^2.0.0",
